switching yow to myaw

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>The first Header</h1>
     <p1 style="color : red">Welcome to my new web site</p1>
     <h2 style="size : larger">The seconde Header</h2>
-    <p2 style="size : blue">you can do anything you want </p2>
-    <p3>YOWWWWWWWW</p3>
+    <p2 style="color : blue">you can do anything you want </p2>
+    <p3>MYAWWWWWWWWW</p3>
     
 </body>
 </html>
